--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,15 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.subhojitpaul.contactsfinder.ShowMapActivity"
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ShowMapActivity"
             android:label="@string/title_activity_show_map" >
         </activity>
 
@@ -39,14 +47,6 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyB9RA9p8XEQe0HdsMJwKTEKpKtjpfnrRww" />
 
-        <activity
-            android:name="com.subhojitpaul.contactsfinder.MainActivity"
-            android:label="@string/title_activity_main" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
