--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,29 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
-    <uses-permission android:name="com.subhojitpaul.contactsfinder.permission.MAPS_RECEIVE" />
+    <!-- Required by Map and GCM -->
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- Required by Map -->
+    <uses-permission android:name="com.subhojitpaul.contactsfinder.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but are recommended.
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <!-- Required by GCM -->
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <!-- For devices < 4.0.4 -->
+    <permission android:name="com.subhojitpaul.contactsfinder.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.subhojitpaul.contactsfinder.permission.C2D_MESSAGE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <!-- This is required so that it does not register or receive other application's messages -->
+    <uses-permission android:name="com.google.android.c2dm.SEND" />
 
     <application
         android:allowBackup="true"
