--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <!-- This is required so that it does not register or receive other application's messages -->
     <uses-permission android:name="com.google.android.c2dm.SEND" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -57,7 +58,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyB9RA9p8XEQe0HdsMJwKTEKpKtjpfnrRww" />
+            android:value="AIzaSyDV56m5tbzC1nB9HSEE738cgrtaGZQPpr8" />
 
     </application>
 
